--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,11 @@ android {
 
     defaultConfig {
         applicationId "fr.kosdev.realestatemanager"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdkVersion 27
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
+        //multiDExEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -24,6 +25,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.room:room-runtime:2.3.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.5.2'
     annotationProcessor "androidx.room:room-compiler:2.3.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.jakewharton:butterknife:10.2.3'
@@ -44,6 +49,11 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
 
 
 
