--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        buildTypes.each{
+            it.buildConfigField 'String', 'GOOGLE_API_KEY', googleApiKey
+        }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
