--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+googleApiKey = "AIzaSyD82JMaZzTg-SzGWcB4vpt_qdKQGQ9JvBo"
