--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Controllers.Activities.LoanSimulatorActivity"
+            android:exported="false" />
+        <activity
             android:name=".Controllers.Activities.UpdatePropertyActivity"
             android:exported="false" />
         <activity
