--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,13 @@ android {
 
     defaultConfig {
         applicationId "fr.kosdev.realestatemanager"
-        minSdkVersion 27
+        minSdkVersion 19
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        //multiDExEnabled true
+        multiDexEnabled true
+
+        //vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
